# starlink_consumo

./: .gitignore  Dockerfile  docker-compose.portainer.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: AUTENTICACAO.md  CHANGELOG.md  CONFIGURACAO_INFLUXDB.md  DETECCAO_DINAMICA_DISPOSITIVOS.md  DOCKER_DEPLOY.md  ESTRUTURA_PROJETO.md  PORTAINER_DEPLOY.md  README.md
scripts/: deploy.bat  deploy.sh  logs.sh  run_app.cmd  run_daily_viewer.cmd  start.sh  stop.sh
src/: __init__.py
src/auth/: __init__.py  authentication.py
src/config/: influx_config.py
src/database/: __init__.py  influx_client.py  test_influx_connection.py
src/reports/: __init__.py  pdf_generator.py
src/web/: __init__.py  app_simple.py  daily_gb_viewer.py
