[project]
name = "starlink-gb"
version = "0.1.0"
description = "Starlink GB Project"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "kaleido>=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
